--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <i class="social-icon fa fa-instagram" aria-hidden="true"></i>
       <i class="social-icon fa fa-envelope" aria-hidden="true"></i>
 
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2020 Manasi Rajiv Weginwar</p>
 
   </footer>
 
